# kelner

./: .gdbinit  .gdbinit.in  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  Makefile.in  README.md  configure.ac
.cargo/: config
bootloader/: a20.s  bios_loader.s  bios_print.asm  bootsector.asm  bootsector.s  config.asm.in  cpu.asm  cpu.s  disk.asm  disk.s  gdt.asm  gdt.s  loader.s  memory.asm  paging.asm  paging.s  pio_loader.asm  pio_loader.s  puts.s  second_stage.asm  second_stage.s  vga_print.s
kernel/: Cargo.toml  Cargo.toml.in  layout.ld  layout.ld.in
kernel/src/: alloc.rs  config.rs.in  debug.rs  main.rs
kernel/src/alloc/: allocator.rs  context.rs  mod.rs
kernel/src/collections/: mod.rs  static_interval.rs  static_intvlist.rs  static_list.rs  static_map.rs  static_stack.rs
kernel/src/interrupt/: macros.rs  mod.rs
kernel/src/kalloc/: alloc_context.rs  allocator.rs  context.rs  mod.rs
kernel/src/layout/: memory_layout.rs  mod.rs
kernel/src/loader/: elf.rs  mod.rs
kernel/src/memory/: interval.rs  layout.rs  mod.rs
kernel/src/paging/: context.rs  macros.rs  mod.rs  paging_context.rs
kernel/src/syscall/: mod.rs
kernel/src/util/: logarithm.rs  mod.rs  set_bits.rs  static_list.rs  static_map.rs  tests.rs  unsigned.rs  weak_rng.rs
kernel/targets/: x86_64-unknown-none.json
kernel/util/: Cargo.toml  lib.rs
kernel/util/tests/: set_bits.rs
